--- a/slam_lidar/package.xml
+++ b/slam_lidar/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>omtb_slam3d</name>
+  <name>slam_lidar</name>
   <version>1.2.1</version>
   <description>
-    The omtb_slam package provides roslaunch scripts for starting the 3D SLAM
+    The omtb_slam package provides roslaunch scripts for starting the 2D SLAM
   </description>
   <license>Apache 2.0</license>
   <author email="dqszfuyu@163.com">Yu Fu</author>
